@@ -1486,6 +1486,8 @@ code {
 
 <p><strong>background</strong> | <code>filename</code> | Filename of the background image for this menu.</p>
 
+<p><strong>enabled</strong> | <code>bool</code> | Used to toggle the ability to open this menu. Only used for Character, Inventory, Powers, and Log menus.</p>
+
 <hr />
 
 <h4>MenuDevConsole</h4>
@@ -1669,6 +1671,8 @@ code {
 <p><strong>close</strong> | <code>point</code> | Position of the close button.</p>
 
 <p><strong>tab_area</strong> | <code>rectangle</code> | Position and dimensions of the tree pages.</p>
+
+<p><strong>upgrade_button_offset</strong> | <code>point</code> | X/Y offset of the upgrade button relative to each power icon. Defaults to (ICON_SIZE, 0)</p>
 
 <hr />
 
