@@ -26,6 +26,7 @@ Engine features:
 * Power 'trait_elemental' now works with all damage types (despite the name). Any additional damage bonuses for the specified damage type will apply on top of the converted damage.
 * Added 'tab.text_padding' to engine/widget_settings.txt config.
 * Added 'enabled' property to Char/Inv/Pow/Log menus for modders that wish to prevent the player from opening those menus.
+* Added 'upgrade_button_offset' property to menu/powers.txt config.
 * Android: Enabled use of external input devices (gamepads, keyboards, mice)
 
 Engine fixes:
